[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.26.6"
regex = "1.6.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
easy-http-request = "0.2.13"
serde = { version = "1.0", features = ["derive"] }
autopilot = "0.4.0"
random-number = "0.1.8"
